# mastoc

./: .gitignore  CLAUDE.md  README.md  START_HERE.md
mastoc/: pyproject.toml
mastoc/src/: stokt_api.py
mastoc/src/mastoc/: __init__.py
mastoc/src/mastoc/api/: __init__.py  client.py  models.py  railway_client.py
mastoc/src/mastoc/core/: __init__.py  annotation_loader.py  assets.py  auth.py  backend.py  config.py  filters.py  hold_index.py  import_data.py  picto.py  picto_cache.py  social_actions.py  social_loader.py  sync.py  sync_stats.py
mastoc/src/mastoc/db/: __init__.py  database.py  repository.py
mastoc/src/mastoc/gui/: __init__.py  app.py  climb_viewer.py  creation_app.py  hold_selector.py  picto_lab.py
mastoc/src/mastoc/gui/creation/: controller.py  state.py  wizard.py
mastoc/src/mastoc/gui/dialogs/: __init__.py  login.py  mastoc_auth.py  sync.py  sync_status.py
mastoc/src/mastoc/gui/widgets/: __init__.py  annotation_panel.py  climb_detail.py  climb_list.py  climb_renderer.py  (+4 more)
mastoc/src/mastoc/tools/: sync_status.py  test_social_endpoints.py
mastoc/tests/: __init__.py  test_annotation_loader.py  test_annotation_panel.py  test_api_crud.py  test_api_errors.py  test_assets.py  test_auth_manager.py  test_backend.py  test_config.py  test_creation.py  test_database.py  test_filters.py  test_hold_selector.py  test_integration.py  test_models.py  test_railway_client.py  test_social.py  test_sync.py
server/: .env.example  Procfile  README.md  pyproject.toml  requirements.txt
server/scripts/: .gitignore  fix_climb_dates.py  fix_climb_dates_sql.py  init_from_stokt.py  migrate_add_tape_str.py  migrate_user_auth.py  resync_holds_tape.py
server/src/mastoc_api/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  security.py
server/src/mastoc_api/models/: __init__.py  base.py  climb.py  face.py  gym.py  hold.py  hold_annotation.py  mapping.py  user.py
server/src/mastoc_api/routers/: __init__.py  auth.py  climbs.py  faces.py  health.py  hold_annotations.py  holds.py  sync.py  users.py
server/tests/: __init__.py  conftest.py  test_auth.py  test_climbs.py  test_faces.py  test_health.py  test_hold_annotations.py  test_holds.py  test_jwt_auth.py  test_permissions.py  test_sync.py  test_users.py
(+254 files in other folders)
